--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -12,8 +12,30 @@
 </head>
 <body>
 <!-- Start Basic Template -->
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <a class="navbar-brand" href="{{ url_for('main.index') }}">Pybo</a>
+    <button class="navbar-toggler bl-auto" type="button" data-toggler="collapse"
+            data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Create Account</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Log In</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 {% block content %}
 {% endblock %}
 <!-- End Basic Template -->
+<!-- JQuery JS -->
+<script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
+<!-- Bootstrap JS -->
+<script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
 </body>
 </html>
