--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -12,13 +12,13 @@
         </thead>
         <tbody>
         {% if question_list %}
-        {% for question in question_list %}
+        {% for question in question_list.items %}
         <tr>
             <td>{{ loop.index }}</td>
             <td>
                 <a href="{{ url_for('question.detail', question_id=question.id) }}">{{ question.subject }}</a>
             </td>
-            <td>{{ question.create_date }}</td>
+            <td>{{ question.create_date|datetime }}</td>
         </tr>
         {% endfor %}
         {% else %}
@@ -28,6 +28,47 @@
         {% endif %}
         </tbody>
     </table>
+    <!-- Handling Paging -->
+    <ul class="pagination justify-content-center">
+        <!-- Previous page -->
+        {% if question_list.has_prev %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ question_list.prev_num }}">Prev</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">Prev</a>
+        </li>
+        {% endif %}
+        {% for page_num in question_list.iter_pages() %}
+            {% if page_num %}
+                {% if page_num != question_list.page %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                </li>
+                {% else %}
+                <li class="page-item active" aria-current="page">
+                    <a class="page-link" href="#">{{ page_num }}</a>
+                </li>
+                {% endif %}
+            {% else %}
+            <li class="disabled">
+                <a class="page-link" href="#">...</a>
+            </li>
+            {% endif %}
+        {% endfor %}
+        <!-- Next page -->
+        {% if question_list.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ question_list.next_num }}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">Next</a>
+        </li>
+        {% endif %}
+    </ul>
+    <!-- End of Handling Page -->
     <a href="{{ url_for('question.create') }}" class="btn btn-primary">Submit Question</a>
 </div>
 {% endblock %}
