--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -10,7 +10,7 @@
       </div>
       <div class="d-flex justify-content-end">
         <div class="badge badge-light p-2">
-          {{ question.create_date }}
+          {{ question.create_date|datetime }}
         </div>
       </div>
     </div>
@@ -26,7 +26,7 @@
       </div>
       <div class="d-flex justify-content-end">
         <div class="badge badge-light p-2">
-          {{ answer.create_date }}
+          {{ answer.create_date|datetime }}
         </div>
       </div>
     </div>
