--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Create Account</a>
+                <a class="nav-link" href="{{ url_for('auth.signup') }}">Create Account</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Log In</a>
