--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -6,13 +6,21 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+        {% if g.user %}
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ g.user.username }} (Log Out)</a>
+            </li>
+        </ul>
+        {% else %}
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('auth.signup') }}">Create Account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Log In</a>
+                <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
             </li>
         </ul>
+        {% endif %}
     </div>
 </nav>
