flask study on 2024-09-15

--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -20,5 +20,8 @@
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
 <!-- Bootstrap JS -->
 <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+<!-- Java Script -->
+{% block script %}
+{% endblock %}
 </body>
 </html>
